--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,13 +11,13 @@
       Website. newconstruction.vn
     </p>
   </div>
-  <div class="flex flex-wrap w-full h-screen relative">
+  <div class="xl:flex xl:flex-wrap w-full h-screen relative">
     <div class="w-full xl:w-1/2 content1" style=" background-image: url('../../../assets/images/banner2.jpg')">
-      <div class="w-28 h-screen relative" style="background-color: rgba(255, 255, 0, 0.5);margin-left: -16px ;">
+      <div class="w-28 h-screen" style="background-color: rgba(255, 255, 0, 0.5);margin-left: -16px ;">
       <p class="absolute bottom-10 text-white mb-6" style="transform: rotate(270deg)">COMMIT</p>
       </div>
     </div>
-    <div class="w-full xl:w-1/2 xl:h-screen h-auto relative">
+    <div class="w-full xl:w-1/2 relative">
       <div class="bg-black text-white absolute z-30" style="margin:23% 0% 0% 22%;padding-right: 40%;">"TRUST FORM THE BEGINING"</div>
       <div class="absolute bg-stone-300 z-0" style="width:60%;height:content;margin: 20%;">
         <p class="pt-24 mx-2">
@@ -40,6 +40,7 @@
       </div>
     </div>
   </div>
+  <div class="static"></div>
   <div class="flex flex-wrap w-full h-screen relative">
     <div class="w-full xl:w-1/2 content1" style=" background-image: url('../../../assets/images/banner3.jpg')">
       <div class="w-28 h-screen relative" style="background-color: rgba(0, 0, 30, 0.5);margin-left: -16px ;">
@@ -67,4 +68,5 @@
       </div>
     </div>
   </div>
+  <app-thietke></app-thietke>
 </app-layout>
