--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -7,7 +7,7 @@
     </div>
     <ul class="flex flex-col lg:flex-row list-none ml-auto justify-between 2xl:w-1/2">
       <li class="nav-item">
-        <a class="px-3 py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-white hover:opacity-75" [routerLink]="" routerLinkActive="active" >
+        <a class="px-3 py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-white hover:opacity-75" routerLink="" routerLinkActive="active" >
           <span class="ml-2">HOME</span>
         </a>
       </li>
@@ -52,22 +52,22 @@
           </a>
         </li>
         <li class="nav-item pb-2">
-          <a class="py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-gray-200 hover:opacity-75" [routerLink]="" routerLinkActive="active">
+          <a class="py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-gray-200 hover:opacity-75" routerLink="project" routerLinkActive="active">
             <span class="ml-2">DỰ ÁN NHÀ PHỐ</span>
           </a>
         </li>
         <li class="nav-item pb-2">
-          <a class="py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-gray-200 hover:opacity-75" [routerLink]="" routerLinkActive="active">
+          <a class="py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-gray-200 hover:opacity-75" routerLink="a" routerLinkActive="active">
             <span class="ml-2">VĂN PHÒNG, SHOWROOM</span>
           </a>
         </li>
         <li class="nav-item pb-2">
-          <a class="py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-gray-200 hover:opacity-75" [routerLink]="" routerLinkActive="active">
+          <a class="py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-gray-200 hover:opacity-75" routerLink="a" routerLinkActive="active">
             <span class="ml-2">DỰ ÁN F&B</span>
           </a>
         </li>
         <li class="nav-item pb-2">
-          <a class="py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-gray-200 hover:opacity-75" [routerLink]="" routerLinkActive="active">
+          <a class="py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-gray-200 hover:opacity-75" routerLink="c" routerLinkActive="active">
             <span class="ml-2">DỰ ÁN CĂN HỘ</span>
           </a>
         </li>
