--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="relative">
-  <div class="flex flex-wrap w-screen  z-50 bg-black text-white">
+  <div class="flex flex-wrap w-full  z-50 bg-black text-white m-0">
     <div class="w-full xl:w-1/2 h-full my-auto">
       <h1 class="text-center pb-5 text-2xl">THÔNG TIN LIÊN HỆ</h1>
       <ul style="width:70%;margin: 0px auto;">
