--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -12,6 +12,11 @@
         </a>
       </li>
       <li class="nav-item">
+        <a class="px-3 py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-white hover:opacity-75" routerLink="" routerLinkActive="active" >
+          <span class="ml-2">SELECTED PROJECT</span>
+        </a>
+      </li>
+      <li class="nav-item">
         <a class="px-3 py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-white hover:opacity-75" [routerLink]="" routerLinkActive="active">
           <span class="ml-2">DỰ ÁN NHÀ PHỐ</span>
         </a>
