--- a/src/app/layouts/header/header.component.scss
+++ b/src/app/layouts/header/header.component.scss
@@ -5,13 +5,14 @@
 .changebg{
   background-color: rgba(000, 0, 0, 0.5);
 }
-a.active{
-  padding: 5px 10px;
-  border:1px solid white;
-  margin: 0;
-}
+
 a{
   cursor: pointer;
+  .active{
+    padding: 5px 10px;
+    border:1px solid white;
+    margin: 0;
+  }
   :hover{
     color: white;
   }
