--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,19 +11,19 @@
       Website. newconstruction.vn
     </p>
   </div>
-  <div class="xl:flex xl:flex-wrap w-full h-full relative">
-    <div class="w-full h-screen xl:w-1/2 content1" style=" background-image: url('../../../assets/images/banner2.jpg')">
+  <div class="flex flex-wrap md:flex-nowrap w-full h-full relative">
+    <div class="w-full h-screen md:w-1/2 content1" style=" background-image: url('../../../assets/images/banner2.jpg')">
       <div class="w-28 h-full" style="background-color: rgba(255, 255, 0, 0.5);margin-left: -16px ;">
       <p class="absolute bottom-10 text-white mb-6" style="transform: rotate(270deg)">COMMIT</p>
       </div>
     </div>
-    <div class="w-full xl:w-1/2 h-screen my-auto relative">
-      <div class="bg-black text-white absolute z-30" style="margin:23% 0% 0% 22%;padding-right: 40%;">"TRUST FORM THE BEGINING"</div>
-      <div class="absolute bg-stone-300 z-0" style="width:60%;height:content;margin: 20%;">
-        <p class="pt-24 mx-2">
+    <div class="w-full mx-3 md:w-1/2 h-max md:mt-0 mb-2 md:h-auto relative">
+      <div class="bg-black text-white md:absolute z-30 my-4 md:mt-[23%] md:ml-[22%] md:pr-[60%]">"TRUST FORM THE BEGINING"</div>
+      <div class="md:absolute bg-stone-300 z-0 md:w-3/5 md:m-[20%]">
+        <p class="md:pt-20 md:mx-2">
           Our aspirations is not only bring pure construction works but to become a long-tern companion with Costomers.
         </p>
-        <p class="pt-16 mx-2">
+        <p class="md:pt-12 mx-2">
           From husman resourses who are young and constantly creative employees, we are ready to go far,
           overcome challenges to develop stronger in the coming time, always keep the prestige and affirm the brand of
           <span class="font-bold">TRUST</span>.
@@ -35,38 +35,40 @@
           </p>
         </div>
       </div>
-      <div style="padding:15%">
+      <div class="md:p-[15%] hidden md:block">
         <div class="w-28 h-28 bg-stone-200"></div>
       </div>
     </div>
   </div>
   <div class="static"></div>
-  <div class="flex flex-wrap w-full h-full relative">
-    <div class="w-full h-screen xl:w-1/2 content1" style=" background-image: url('../../../assets/images/banner3.jpg')">
+  <div class="flex flex-wrap md:flex-nowrap w-full h-full relative">
+    <div class="w-full h-screen md:w-1/2 content1" style=" background-image: url('../../../assets/images/banner3.jpg')">
       <div class="w-28 h-full relative" style="background-color: rgba(0, 0, 30, 0.5);margin-left: -16px ;">
         <p class="absolute bottom-10 text-white mb-6" style="transform: rotate(270deg)">MISSON</p>
         </div>
     </div>
-    <div class="w-full xl:w-1/2 xl:h-full xl:mt-0 h-screen my-auto relative">
-      <div class="bg-yellow-400 text-white absolute z-30" style="margin:23% 0% 0% 22%;padding-right: 60%;">"COMMIT"</div>
-      <div class="absolute bg-stone-300 z-0" style="width:60%;margin: 20%;">
-        <p class="pt-20 mx-2">
+    <div class="w-full mx-3 md:w-1/2 h-max md:mt-0 mb-2 md:h-auto relative">
+      <div class="bg-yellow-400 text-white md:absolute z-30 my-4 md:mt-[23%] md:ml-[22%] md:pr-[60%]">"COMMIT"</div>
+      <div class="md:absolute bg-stone-300 z-0 md:w-3/5 md:m-[20%]">
+        <p class="md:pt-20 md:mx-2">
           01. Constantly innovating thinking, improving the quality managerment system.
         </p>
-        <p class="pt-12 mx-2">
+        <p class="md:pt-12 mx-2">
           02. Delicated to completing quality works, ensuring delivery schedule and thoughtful maintenance.
         </p>
-        <p class="pt-12 mx-2">
+        <p class="md:pt-12 mx-2">
          03.Focusing on training and profes-sional improvement for ths staff, building a strong solidarity collective.
         </p>
-        <p class="pt-12 mx-2">
+        <p class="md:pt-12 mx-2">
           04.increased investment in equipment, hight quality of works, optimization of ex-ecution time.
          </p>
       </div>
-      <div style="padding:15%">
+      <div class="md:p-[15%] hidden md:block">
         <div class="w-28 h-28 bg-stone-200"></div>
       </div>
     </div>
   </div>
   <app-thietke></app-thietke>
+  <div class="my-5"></div>
+  <app-slider></app-slider>
 </app-layout>
