done selected and townhouse

--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,38 +1,38 @@
 <nav class="fixed z-30 w-full hidden xl:flex flex-wrap items-center justify-between px-2 py-3 mt-0 mb-3 laptop" [ngClass]="{'changebg':changeColor,'bg-transparent':!changeColor}">
   <div class="w-full mx-auto flex flex-wrap items-center justify-between 2xl:px-12">
     <div class="w-full flex lg:w-auto  px-4 lg:block lg:justify-start">
-      <a [routerLink]="" routerLinkActive="active" class="items-center">
+      <a routerLink="/home" class="items-center">
         <img src="assets/images/logo.png" class="object-scale-down h-24 w-auto" alt="Flowbite Logo" />
     </a>
     </div>
     <ul class="flex flex-col lg:flex-row list-none ml-auto justify-between 2xl:w-1/2">
       <li class="nav-item">
-        <a class="px-3 py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-white hover:opacity-75" routerLink="" routerLinkActive="active" >
+        <a class="px-3 py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-white hover:opacity-75" routerLink="/home" routerLinkActive="active">
           <span class="ml-2">HOME</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="px-3 py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-white hover:opacity-75" routerLink="" routerLinkActive="active" >
-          <span class="ml-2">SELECTED PROJECT</span>
+        <a class="px-3 py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-white hover:opacity-75" routerLink="/selected" routerLinkActive="active" >
+          <span class="ml-2">DỰ ÁN NỔI BẬT</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="px-3 py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-white hover:opacity-75" [routerLink]="" routerLinkActive="active">
+        <a class="px-3 py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-white hover:opacity-75" routerLink="/townhouse" routerLinkActive="active">
           <span class="ml-2">DỰ ÁN NHÀ PHỐ</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="px-3 py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-white hover:opacity-75" [routerLink]="" routerLinkActive="active">
+        <a class="px-3 py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-white hover:opacity-75" routerLink="/vanphong" routerLinkActive="active">
           <span class="ml-2">VĂN PHÒNG,SHOWROOM</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="px-3 py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-white hover:opacity-75" [routerLink]="" routerLinkActive="active">
+        <a class="px-3 py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-white hover:opacity-75" routerLink="/dafb" routerLinkActive="active">
           <span class="ml-2">DỰ ÁN F&B</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="px-3 py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-white hover:opacity-75" [routerLink]="" routerLinkActive="active">
+        <a class="px-3 py-2 flex items-center text-sm 2xl:text-xl uppercase font-bold leading-snug text-white hover:opacity-75" routerLink="/dacanho" routerLinkActive="active">
           <span class="ml-2">DỰ ÁN CĂN HỘ</span>
         </a>
       </li>
