--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,16 +1,16 @@
 <footer class="relative">
   <div class="flex flex-wrap w-full  z-50 bg-black text-white m-0">
-    <div class="w-full xl:w-1/2 h-full my-auto">
-      <h1 class="text-center pb-5 text-2xl">THÔNG TIN LIÊN HỆ</h1>
-      <ul style="width:70%;margin: 0px auto;">
+    <div class="md:w-1/2 h-full my-auto">
+      <h1 class="text-center pb-5 text-xl md:text-2xl">THÔNG TIN LIÊN HỆ</h1>
+      <ul style="width:70%;margin: 0px auto;" class="text-sm md:text-xl">
         <li>Địa chỉ: 162 Ngô Tất Tố, phường 22, Bình Thạnh, Tp.HCM</li>
         <li>Hotline: (028) 665.777.68 - 089.8857.089</li>
-        <li>Email: newconstructionhcm@gmail.com</li>
+        <li class="text">Email: newconstructionhcm@gmail.com</li>
         <li>Nhà xưởng: 18A Đường 157, xã Bình Mỹ, Củ Chi, Tp.HCM</li>
       </ul>
     </div>
-    <div class="w-full xl:w-1/2 h-full my-auto text-center">
-      <h1 class="text-4xl">Contact─── Us</h1>
+    <div class="md:w-1/2 h-full my-auto text-center">
+      <h1 class="text-xl md:text-4xl">Contact─── Us</h1>
       <h2 class="text-xl text-center py-6">New Construction luôn sẵn sàng và rất hân hạnh được hỗ trợ Quý Khách.</h2>
       <h3>Facebook</h3>
       <a href="https://www.facebook.com/noithatnewcons"
@@ -19,8 +19,8 @@
         class="text-center pb-6">https://www.facebook.com/Newconstruction.vn</a>
       <h3>QR CODE</h3>
       <div class="flex flex-wrap w-full mx-auto justify-between">
-        <img src="../../../assets/images/qrfb.PNG" class="object-contain w-3/5 xl:w-1/3 mx-auto pb-7" alt="hinh">
-        <img src="../../../assets/images/qrweb.PNG" class="object-contain w-3/5 xl:w-1/3 mx-auto pb-7" alt="hinh">
+        <img src="../../../assets/images/qrfb.PNG" class="object-contain w-1/3 mx-auto pb-7" alt="hinh">
+        <img src="../../../assets/images/qrweb.PNG" class="object-contain w-1/3 mx-auto pb-7" alt="hinh">
       </div>
     </div>
     <div class="flex flex-wrap w-full mx-auto justify-between px-9 py-4">
