--- a/src/app/pages/townhouse/townhouse.component.html
+++ b/src/app/pages/townhouse/townhouse.component.html
@@ -19,7 +19,7 @@
             Phong cách: hiện đại
           </p>
         </div>
-        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 w-full py-4 px-16">
+        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 w-auto py-4 px-8 xl:px-16">
           <div class="justify-start items-center mb-4 last:mr-auto w-full h-full cursor-pointer" *ngFor="let img of anhson">
             <div class="relative max-w-sm transition-all duration-300 cursor-pointer">
               <a style="cursor:pointer">
@@ -29,40 +29,38 @@
           </div>
         </div>
       </div>
-    </div>
+      <div>
+        <div class="homebg items-center" style="background-image: url('../../../assets/images/townhouse/banner-np1.jpg');">
+          <p class="text-2xl absolute text-end right-0 pr-10 pl-32 font-bold ml-12 bg-gray-700 text-white py-2 top-32">DỰ ÁN NHÀ PHỐ</p>
+        </div>
+        <div class="w-full flex absolute mb-4">
+          <div class="w-full flex absolute bottom-20 justify-center">
+            <h2 class="text-4xl text-white text-center font-semibold">NHÀ LONG AN</h2>
+          </div>
+        </div>
+        <div class="w-full relative">
+          <div class="text-center">
+            <h2 class="my-10 text-2xl" style=" font-family: Arial, Helvetica, sans-serif;">Nhà Long An - Nhà anh Lộc</h2>
+            <p class="text-md" style="font-family: Helvetica;opacity:0.9">
+              Chủ đầu tư: Anh Lộc<br>
+              Quy mô: 120m2 <br>
+              Mức đầu tư: 1.6 tỷ <br>
 
+            </p>
+          </div>
+          <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 w-auto py-4 px-8 xl:px-16">
+            <div class="justify-start items-center mb-4 last:mr-auto w-full h-full cursor-pointer" *ngFor="let img of anhloc">
+              <div class="relative max-w-sm transition-all duration-300 cursor-pointer">
+                <a style="cursor:pointer">
+                    <img class="rounded-lg md:h-[250px] drop-shadow-xl" src="../../../assets/images/townhouse/{{img[0]}}" alt="{{img[1]}}" />
+                </a>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div *ngIf="change == 2">
-      <div class="homebg items-center" style="background-image: url('../../../assets/images/townhouse/banner-np1.jpg');">
-        <p class="text-2xl absolute text-end right-0 pr-10 pl-32 font-bold ml-12 bg-gray-700 text-white py-2 top-32">DỰ ÁN NHÀ PHỐ</p>
-      </div>
-      <div class="w-full flex absolute mb-4">
-        <div class="w-full flex absolute bottom-20 justify-center">
-          <h2 class="text-4xl text-white text-center font-semibold">NHÀ LONG AN</h2>
-        </div>
-      </div>
-      <div class="w-full relative">
-        <div class="text-center">
-          <h2 class="my-10 text-2xl" style=" font-family: Arial, Helvetica, sans-serif;">Nhà Long An - Nhà anh Lộc</h2>
-          <p class="text-md" style="font-family: Helvetica;opacity:0.9">
-            Chủ đầu tư: Anh Lộc<br>
-            Quy mô: 120m2 <br>
-            Mức đầu tư: 1.6 tỷ <br>
-
-          </p>
-        </div>
-        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 w-full py-4 px-16">
-          <div class="justify-start items-center mb-4 last:mr-auto w-full h-full cursor-pointer" *ngFor="let img of anhloc">
-            <div class="relative max-w-sm transition-all duration-300 cursor-pointer">
-              <a style="cursor:pointer">
-                  <img class="rounded-lg md:h-[250px] drop-shadow-xl" src="../../../assets/images/townhouse/{{img[0]}}" alt="{{img[1]}}" />
-              </a>
-          </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div *ngIf="change == 3">
       <div class="homebg items-center" style="background-image: url('../../../assets/images/townhouse/banner-np2.jpg');">
         <p class="text-2xl absolute text-end right-0 pr-10 pl-32 font-bold ml-12 bg-gray-700 text-white py-2 top-32">DỰ ÁN NHÀ PHỐ</p>
       </div>
@@ -80,7 +78,7 @@
             Mức đầu tư: 180tr <br>
           </p>
         </div>
-        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 w-full py-4 px-16">
+        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 w-auto py-4 px-8 xl:px-16">
           <div class="justify-start items-center mb-4 last:mr-auto w-full h-full cursor-pointer" *ngFor="let img of anhphu">
             <div class="relative max-w-sm transition-all duration-300 cursor-pointer">
               <a style="cursor:pointer">
@@ -90,9 +88,6 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <div *ngIf="change == 4">
       <div class="homebg items-center" style="background-image: url('../../../assets/images/townhouse/banner-np3.jpg');">
         <p class="text-2xl absolute text-end right-0 pr-10 pl-32 font-bold ml-12 bg-gray-700 text-white py-2 top-32">DỰ ÁN NHÀ PHỐ</p>
       </div>
@@ -111,7 +106,7 @@
             Phong cách: hiện đại
           </p>
         </div>
-        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 w-full py-4 px-16">
+        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 w-auto py-4 px-8 xl:px-16">
           <div class="justify-start items-center mb-4 last:mr-auto w-full h-full cursor-pointer" *ngFor="let img of chiloan">
             <div class="relative max-w-sm transition-all duration-300 cursor-pointer">
               <a style="cursor:pointer">
@@ -122,14 +117,20 @@
         </div>
       </div>
     </div>
-    <div class="fixed top-1/2 left-5 transition-all">
-      <button (click)="slickleft()" class="text-2xl opacity-70 cursor-pointer">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class=" opacity-30 hover:opacity-100 hover:text-gray-600 dark:text-white" width="30"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg>
+    <div class="fixed top-1/2 md:left-5 left-0 transition-all">
+      <button (click)="slickleft()" class="text-2xl cursor-pointer">
+        <span class=" xl:hidden hover:opacity-100 hover:text-gray-600 dark:text-gray-300 text-gray-500"><</span>
+       <div class="hidden xl:block">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class=" opacity-30 hover:opacity-100 hover:text-gray-600 dark:text-gray-300" width="30"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg>
+       </div>
       </button>
     </div>
-    <div class="fixed top-1/2 right-5 transition-all">
-      <button (click)="slickright()" class="text-2xl opacity-70 cursor-pointer ">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="opacity-30 hover:opacity-100 hover:text-gray-800  dark:text-white" width="30"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M342.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L274.7 256 105.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
+    <div class="fixed top-1/2 right-0 md:right-5 transition-all">
+      <button (click)="slickright()" class="text-2xl cursor-pointer ">
+        <p class=" xl:hidden hover:opacity-100 hover:text-gray-600 dark:text-gray-300 text-gray-500">></p>
+        <div class="hidden xl:block">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="opacity-30 hover:opacity-100 hover:text-gray-800  dark:text-gray-300" width="30"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M342.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L274.7 256 105.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
+        </div>
       </button>
     </div>
   </div>
