--- a/src/app/pages/apartment/apartment.component.html
+++ b/src/app/pages/apartment/apartment.component.html
@@ -1,6 +1,6 @@
 <app-layout>
   <div class="bg-gray-100 relative th_container">
-    <div *ngFor="let data of apartment;let i = index" class="my-10">
+    <div *ngFor="let data of apartment;let i = index" class="mb-10">
       <div class="homebg items-center" style="background-image: url('../../../assets/images/apartment/{{data[0]}}');">
         <p class="text-2xl absolute text-end right-0 pr-10 pl-32 font-bold ml-12 bg-gray-700 text-white py-2 top-32">DỰ ÁN F&B</p>
       </div>
