--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <app-layout>
   <div class="homebg items-center">
-    <p class="text-2xl absolute text-end right-0 pr-10 pl-32 font-bold ml-12 bg-slate-200 top-32">NEW CONSTRUCTION</p>
+    <p class="text-2xl absolute text-end right-0 pr-10 pl-32 font-bold  bg-slate-200 top-32">NEW CONSTRUCTION</p>
   </div>
   <div class="w-full flex absolute bottom-4">
     <img src="../../../assets/images/logo.png" class="object-scale-down h-24 w-auto absolute right-2" alt="NEW CONSTRUCTION">
@@ -14,19 +14,19 @@
   <div class="flex flex-wrap md:flex-nowrap w-full h-full relative">
     <div class="w-full h-screen md:w-1/2 content1" style=" background-image: url('../../../assets/images/banner2.jpg')">
     </div>
-    <div class="w-full mx-3 md:w-1/2 h-max md:mt-0 mb-2 md:h-auto relative">
-      <div class="bg-black text-white md:absolute z-30 my-4 py-3 md:mt-[23%] md:ml-[22%] md:w-[80%]">"TIN TƯỞNG HÌNH THÀNH BẮT ĐẦU"</div>
-      <div class="md:absolute bg-stone-300 z-0 md:w-3/5 md:m-[20%]">
-        <p class="md:pt-20 md:mx-2">
+    <div class="w-full px-3 md:w-1/2 h-max md:mt-0 mb-2 md:h-auto relative">
+      <div class="md:absolute bg-stone-300 z-0 md:w-3/5 md:m-[20%] px-4 py-2" style="border-radius:14px;">
+        <div class="bg-black  xl:absolute z-30  xl:my-4 xl:ml-6 py-3 w-full xl:w-[120%] pl-4 text-white" style="border-radius:5px;">"TIN TƯỞNG HÌNH THÀNH BẮT ĐẦU"</div>
+        <p class="md:pt-20 md:px-2">
           Khát vọng của chúng tôi không chỉ mang đến những công trình xây dựng đơn thuần mà trở thành người bạn đồng hành lâu dài cùng Costomers.
         </p>
-        <p class="md:pt-12 mx-2">
+        <p class="md:pt-12 px-2">
           Từ nguồn nhân lực husman là những nhân viên trẻ và không ngừng sáng tạo, chúng tôi sẵn sàng tiến xa,
           vượt qua thách thức để phát triển mạnh mẽ hơn trong thời gian tới, luôn giữ uy tín và khẳng định thương hiệu của
           <span class="font-bold">LÒNG TIN</span>.
         </p>
         <div class="w-full static">
-          <p class="text-right pr-8">
+          <p class="text-right pr-8 pb-3">
             <span class="font-bold pr-4">Dinh Duy Hoa</span><br>
             Người sáng lập & Giám đốc
           </p>
@@ -44,19 +44,19 @@
         <p class="absolute bottom-10 text-white mb-6" style="transform: rotate(270deg)">COMMIT</p>
         </div>
     </div>
-    <div class="w-full mx-3 md:w-1/2 h-max md:mt-0 mb-2 md:h-auto relative">
-      <div class="bg-yellow-400 text-white md:absolute z-30 my-4 py-4 md:mt-[23%] md:ml-[22%] md:w-[80%]">"THỰC HIỆN"</div>
-      <div class="md:absolute bg-stone-300 z-0 md:w-3/5 md:m-[20%]">
-        <p class="md:pt-20 md:mx-2">
+    <div class="w-full px-3 md:w-1/2 h-max md:mt-0 mb-2 md:h-auto relative">
+      <div class="md:absolute bg-stone-300 z-0 md:w-3/5 md:m-[20%] px-4 py-2" style="border-radius:14px;">
+        <div class="pl-4 bg-yellow-400 text-white xl:absolute z-30  xl:my-4 xl:ml-6 py-3 w-full xl:w-[120%]" style="border-radius:5px;">"THỰC HIỆN"</div>
+        <p class="md:pt-20 px-2">
           01. Không ngừng đổi mới tư duy, cải tiến hệ thống quản lý chất lượng.
         </p>
-        <p class="md:pt-12 mx-2">
+        <p class="md:pt-12 px-2">
           02. Tận tâm hoàn thành công trình chất lượng, đảm bảo đúng tiến độ bàn giao và bảo trì chu đáo.
         </p>
-        <p class="md:pt-12 mx-2">
+        <p class="md:pt-12 px-2">
           03.Tập trung đào tạo, bồi dưỡng nâng cao trình độ cho cán bộ, xây dựng tập thể đoàn kết vững mạnh.
         </p>
-        <p class="md:pt-12 mx-2">
+        <p class="md:pt-12 px-2 pb-3">
           04. Tăng cường đầu tư trang thiết bị, nâng cao chất lượng công trình, tối ưu hóa thời gian xuất xưởng.
          </p>
       </div>
