--- a/src/app/pages/selected/selected.component.html
+++ b/src/app/pages/selected/selected.component.html
@@ -1,5 +1,5 @@
 <app-layout>
-  <div class="bg-gray-300">
+  <div class="bg-gray-100 relative w-full max-w-full">
     <div class="homebg items-center">
       <p class="text-2xl absolute text-end right-0 pr-10 pl-32 font-bold ml-12 bg-gray-700 text-white py-2 top-32">DỰ ÁN NỔI BẬT</p>
     </div>
