--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
   transform-origin: 100%;
   transition-duration: 2s;
   .homebg{
-    width: 100vw;
+    width: 100%;
     height: 50vh;
     position:relative;
     margin: 0%;
@@ -19,7 +19,7 @@
     background-position: center;
   }
   ::after{
-    width: 100vw;
+    width: 100%;
     height: 50vh;
     margin: 0%;
     transition: all .5s linear;
